<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav"
    app:startDestination="@id/signUpFragment">

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.ps.universal.view.registration.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_termsAndConditionFragment2"
            app:destination="@id/termsAndConditionFragment" />
    </fragment>
    <fragment
        android:id="@+id/termsAndConditionFragment"
        android:name="com.ps.universal.view.registration.TermsAndConditionFragment"
        android:label="fragment_terms_and_condition"
        tools:layout="@layout/fragment_terms_and_condition"/>
</navigation>