...

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dashboard2">DashboardActivity</string>
    <string name="title_activity_dashboard21">Dashboard2Activity1</string>
    <string name="login_error">Invalid credentials</string>
</resources>
